--- a/task7/CMakeLists.txt
+++ b/task7/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.12)
-project(ConstantFolding)
+project(MulToAdd)
 
 # LLVM uses C++17.
 set(CMAKE_CXX_STANDARD 17)
@@ -19,5 +19,4 @@ include_directories(${LLVM_INCLUDE_DIRS})
 link_directories(${LLVM_LIBRARY_DIRS})
 
 # Our pass lives in this subdirectory.
-add_subdirectory(constant_folding)
 add_subdirectory(mul_to_add)
